--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,13 @@ dependencies = [
     "pyqt5>=5.15.11",
     "rubik-cube>=0.0.2",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
